# global-macro-scanner

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cashtag_Backtest_Plan.md  DEVELOPMENT.md  GEMINI.md  MULTI_AGENT_PROJECT_BOOTSTRAP_GUIDE.md  Makefile  README.md  config.py  db.py  main.py  main_v1_backup.py  mcp_database_config.json  package-lock.json  package.json  package_backup.json  pyproject.toml  pytest.ini  python_upgrade_checklist.md  recent_catches.csv  replit.md  requirements.txt  setup_mcp_database.md  test_telegram.py  tree.txt
.claude/: settings.local.json
alerts/: telegram.py
client/: requirements.md
config/: __init__.py  criteria.py  markets.py  settings.py
data/: cache_manager.py  currency.py  providers.py
docs/: README.md  master_development_plan.md  multi_account_thailand_investigation.md  thailand_ibkr_delayed_data_investigation.md  thailand_set_deep_dive.md
global-macro-scanner/: .cursorrules  .env  .gitignore  CLAUDE.md  Makefile  README.md  audit_mkt_json.py  bad_ticker_log.txt  bad_ticker_log_v2.txt  check_data_completeness.py  check_progress.py  check_schema.py  check_yf.py  compare_fundamentals.py  config.py  count_nodes.py  db.py  debug_flatten.py  debug_output.txt  discover_all_paths.py  discover_xml.py  dump_xml.py  extract_ratios.py  final_comparison.txt  final_run_output.txt  flatten_ibkr.py  flatten_ibkr_mega.py  flatten_output.txt  ib_delayed_test.py  ib_discovery.py.ib_insync_backup  ib_parameters.xml  ibkr_raw_RELIANCE_NS.xml  implementation_plan.md  main-paper.py  main.py  (+24 more)
(+209 files in other folders)
